Fix copyright notice visibility

--- a/app/src/components/destination/Destination.scss
+++ b/app/src/components/destination/Destination.scss
@@ -62,8 +62,8 @@
   }
 
   & .copyright {
-    margin-top: 36px;
-    margin-bottom: 24px;
+    margin-top: 24px;
+    margin-bottom: 56px;
     font-style: italic;
     text-align: center;
     font-size: 14px;
